Candles serialize JSON with time as UNIX
